Allow a backspace to escape any character in the StreamRecordConverter's ObjectMapper. The EnhancedDocument is escaping single quotes. Also, skip data that cannot be parsed entirely rather than silently send empty data. Resolves #3664.
Signed-off-by: David Venable <dlv@amazon.com>